@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: configure.ac,v 1.76.2.2 2006-10-24 05:23:00 chu11 Exp $
+## $Id: configure.ac,v 1.76.2.3 2006-10-30 17:51:04 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with autoconf to produce a configure script.
 ##*****************************************************************************
@@ -172,7 +172,6 @@ AM_CONDITIONAL(WITH_CONFIG_STATIC_MODULES,
                [(test "$ac_with_static_modules" = "yes") &&
                 (test "1" = "2")])
 
-# Placeholder, please don't dailywtf me :-)
 AM_CONDITIONAL(WITH_EVENT_STATIC_MODULES,
                [(test "$ac_with_static_modules" = "yes") &&
                 (test "$ac_with_updown_event" = "yes")])
