@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.8 2006-02-28 16:42:29 chu11 Exp $
+## $Id: Makefile.am,v 1.8.2.1 2006-10-30 17:51:05 chu11 Exp $
 ##*****************************************************************************
 
 include_HEADERS        = cerebro.h
@@ -8,6 +8,7 @@ nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
 			 cerebro/cerebro_config_module.h \
 			 cerebro/cerebro_constants.h \
 			 cerebro/cerebro_error.h \
+			 cerebro/cerebro_event_module.h \
 			 cerebro/cerebro_metric_module.h \
 			 cerebro/cerebro_monitor_module.h \
 			 cerebro/cerebro_metric_server_protocol.h \
