@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_constants.h,v 1.6.2.1 2006-10-30 00:58:34 chu11 Exp $
+ *  $Id: cerebro_constants.h,v 1.6.2.2 2006-10-30 17:51:05 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -46,6 +46,8 @@
 #define CEREBRO_MAX_NETWORK_INTERFACE_LEN  128
 
 #define CEREBRO_MAX_METRIC_NAME_LEN        32
+
+#define CEREBRO_MAX_EVENT_NAME_LEN         32
 
 /* Max of CEREBRO_MAX_NODENAME_LEN & CEREBRO_MAX_METRIC_NAME_LEN */
 #define CEREBRO_MAX_NAME_LEN               CEREBRO_MAX_NODENAME_LEN
